--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,6 +23,7 @@
   </head>
   <body style="margin: 0 0 0 0;">
     <div id="root" ></div>
+    <div id="PollModalRoot" ></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
