Added SingUp and SignIn, need to add actions and relating code on the back-end.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,6 +24,7 @@
   <body style="margin: 0 0 0 0;">
     <div id="root" ></div>
     <div id="PollModalRoot" ></div>
+    <div id="SingInFormRoot"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
